# eubucco-conflation

./: .gitignore  README.md  conflation-methods.ipynb  matching-assessment.ipynb  model-training-eubucco-v1.ipynb  pyproject.toml
conflation/: alignment.py  conflation.py  feateng.py  features.py  geoutil.py  merge.py  pairs.py  prediction.py
data/: places-sample.parquet
data/aaai/: buildings-gov.parquet  buildings-msft.parquet  buildings-osm.parquet  matching-pairs.parquet
data/conflation-test-regions/gov/: ES630-88391aa985fffff.parquet
data/conflation-test-regions/msft/: ES630-88391aa985fffff.parquet
data/conflation-test-regions/osm/: ES630-88391aa985fffff.parquet
data/train/: labels-individual.csv  labels.csv  xgboost-model-eubucco-v1.json  xgboost-model.json
data/val/: labels-neighborhood-gov-msft-individual.csv  labels-neighborhood-gov-msft.csv  labels-neighborhood-gov-osm-individual.csv  labels-neighborhood-gov-osm.csv  labels-neighborhood-osm-msft-individual.csv  labels-neighborhood-osm-msft.csv
eubucco_conflator/: app.py  run.py  state.py
eubucco_conflator/templates/: show_candidate.html
slurm-pipeline/: config.yml  conflate.py  params-conflation.yml
tests/: test_conflation_e2e.py
