[project]
name = "eubucco-conflation"
version = "0.1.0"
description = "Conflation pipeline for EUBUCCO building dataset."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.4",
    "geo-matcher",
    "geopandas>=1.0.1",
    "h3>=4.2.2",
    "momepy>=0.9.0",
    "networkx>=3.2.1",
    "numba>=0.61.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "lightgbm>=4.6.0",
    "line-profiler>=5.0.0",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.0",
    "matplotlib-venn>=1.1.2",
    "memory-profiler>=0.61.0",
    "mlxtend>=0.23.4",
    "optuna>=4.4.0",
    "pytorch-tabnet>=4.1.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "umap-learn>=0.5.9.post2",
]

[tool.uv.sources]
geo-matcher = { git = "https://github.com/ai4up/geo-matcher" }
